--- a/app/Parts.html
+++ b/app/Parts.html
@@ -53,6 +53,18 @@
 					</thead>
 					<tbody>
 						<tr>
+							<td><a href="http://parts.igem.org/Part:BBa_K1189024">BBa_K1189024</a></td>
+							<td>Coding</td>
+							<td>Light chain human ferritin</td>
+							<td>Bronze #4 Contribution</td>
+						</tr>
+						<tr>
+							<td><a href="http://parts.igem.org/Part:BBa_K1189025">BBa_K1189025</a></td>
+							<td>Coding</td>
+							<td>Heavy chain human ferritin</td>
+							<td>Bronze #4 Contribution</td>
+						</tr>
+						<tr>
 							<td><a href="http://parts.igem.org/Part:BBa_K3381000">BBa_K3381000</a></td>
 							<td>Coding</td>
 							<td>FutA1 (iron-binding)</td>
@@ -91,25 +103,13 @@
 						<tr>
 							<td><a href="http://parts.igem.org/Part:BBa_K3381006">BBa_K3381006</a></td>
 							<td>Coding</td>
-							<td>Improved Mst-CopC</td>
+							<td>Improved Mst-CopC-CBM2a</td>
 							<td></td>
 						</tr>
 						<tr>
-							<td><a href="http://parts.igem.org/Part:BBa_K1189024">BBa_K1189024</a></td>
+							<td><a href="http://parts.igem.org/Part:K3381007">BBa_K3381007</a></td>
 							<td>Coding</td>
-							<td>Light chain human ferritin</td>
-							<td>Bronze #4 Contribution</td>
-						</tr>
-						<tr>
-							<td><a href="http://parts.igem.org/Part:BBa_K1189024">BBa_K1189024</a></td>
-							<td>Coding</td>
-							<td>Heavy chain human ferritin</td>
-							<td>Bronze #4 Contribution</td>
-						</tr>
-						<tr>
-							<td><a href="http://parts.igem.org/Part:BBa_K863101">BBa_K863101</a></td>
-							<td>Protein-Domain</td>
-							<td>Cellulose binding Domain of Cellulomonas Fimi Exoglucanse (Freiburg-Standard)</td>
+							<td>CBM2a + Flexible Linker</td>
 							<td></td>
 						</tr>
 					</tbody>
@@ -117,7 +117,7 @@
 			</div>
 		</article>
     </main>
-  <footer></footer>
-</body>
+  	<footer></footer>
+	</body>
 </html>
 
