--- a/app/Team.html
+++ b/app/Team.html
@@ -88,13 +88,13 @@
 							<img id='teammate' src='/images/alexchan.png'>
 						</div>
 						<div class="col">
-							<img id='teammate' src='/images/alinaarvisais.png' onmouseover="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_sillyalinaarvisais.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_alinaarvisais.png';"/>
+							<img id='teammate' src='/images/alinaarvisais.png' onmouseover="this.src='https://2020.igem.org/wiki/images/4/40/T--Waterloo--2020_sillyalinaarvisais.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/8/87/T--Waterloo--2020_alinaarvisais.png';"/>
 						</div>
 						<div class="col">
-							<img id='teammate' src='/images/anthonydang.png' onmouseover="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_sillyanthonydang.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_anthonydang.png';"/>
+							<img id='teammate' src='/images/anthonydang.png' onmouseover="this.src='https://2020.igem.org/wiki/images/d/df/T--Waterloo--2020_sillyanthonydang.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/1/13/T--Waterloo--2020_anthonydang.png';"/>
 						</div>
 						<div class="col">
-							<img id='teammate' src='/images/braedenmacdougall.png' onmouseover="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_sillybraedenmacdougall.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_braedenmacdougall.png';"/>
+							<img id='teammate' src='/images/braedenmacdougall.png' onmouseover="this.src='https://2020.igem.org/wiki/images/6/65/T--Waterloo--2020_sillybraedenmacdougall.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/3/36/T--Waterloo--2020_braedenmacdougall.png';"/>
 						</div>
 					</div>
 					<div class="row">
@@ -159,16 +159,16 @@
 				<div class="accordion">
 					<div class="row">
 						<div class="col">
-							<img id='teammate' src='/images/fatimaanwar.png' onmouseover="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_sillyfatimaanwar.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_fatimaanwar.png';"/>
+							<img id='teammate' src='/images/fatimaanwar.png' onmouseover="this.src='https://2020.igem.org/wiki/images/8/88/T--Waterloo--2020_sillyfatimaanwar.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/6/68/T--Waterloo--2020_fatimaanwar.png';"/>
 						</div>
 						<div class="col">
 							<img id='teammate' src='/images/genevievebelford.png'>
 						</div>
 						<div class="col">
-							<img id='teammate' src='/images/jeriannhsiao.png' onmouseover="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_sillyjeriannhsiao.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_jeriannhsiao.png';"/>
+							<img id='teammate' src='/images/jeriannhsiao.png' onmouseover="this.src='https://2020.igem.org/wiki/images/1/10/T--Waterloo--2020_sillyjeriannhsiao.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/1/12/T--Waterloo--2020_jeriannhsiao.png';"/>
 						</div>
 						<div class="col">
-							<img id='teammate' src='/images/joshuahanneson.png' onmouseover="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_sillyjoshuahanneson.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_joshuahanneson.png';"/>
+							<img id='teammate' src='/images/joshuahanneson.png' onmouseover="this.src='https://2020.igem.org/wiki/images/d/dd/T--Waterloo--2020_sillyjoshuahanneson.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/3/31/T--Waterloo--2020_joshuahanneson.png';"/>
 						</div>
 					</div>
 					<div class="row">
@@ -234,7 +234,7 @@
 							<img id='teammate' src='/images/katiewalker.png'/>
 						</div>
 						<div class="col">
-							<img id='teammate' src='/images/lorenzoperez.png' onmouseover="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_sillylorenzoperez.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_lorenzopérez.png';"/>
+							<img id='teammate' src='/images/lorenzoperez.png' onmouseover="this.src='https://2020.igem.org/wiki/images/0/0f/T--Waterloo--2020_sillylorenzoperez.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/7/71/T--Waterloo--2020_lorenzoperez.png';"/>
 						</div>
 						<div class="col">
 							<img id='teammate' src='/images/michaellam.png'/>
@@ -302,16 +302,16 @@
 				<div class="accordion">
 					<div class="row">
 						<div class="col">
-							<img id='teammate' src='/images/renessagomes.png' onmouseover="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_sillyrenessagomes.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_renessagomes.png';"/>
+							<img id='teammate' src='/images/renessagomes.png' onmouseover="this.src='https://2020.igem.org/wiki/images/0/0a/T--Waterloo--2020_sillyrenessagomes.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/0/0c/T--Waterloo--2020_renessagomes.png';"/>
 						</div>
 						<div class="col">
-							<img id='teammate' src='/images/rileyhenderson.png' onmouseover="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_sillyrileyhenderson.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_rileyhenderson.png';"/>
+							<img id='teammate' src='/images/rileyhenderson.png' onmouseover="this.src='https://2020.igem.org/wiki/images/c/c7/T--Waterloo--2020_sillyrileyhenderson.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/1/15/T--Waterloo--2020_rileyhenderson.png';"/>
 						</div>
 						<div class="col">
-							<img id='teammate' src='/images/sarahhardy.png' onmouseover="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_sillysarahhardy.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_sarahhardy.png';"/>
+							<img id='teammate' src='/images/sarahhardy.png' onmouseover="this.src='https://2020.igem.org/wiki/images/5/5e/T--Waterloo--2020_sillysarahhardy.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/4/42/T--Waterloo--2020_sarahhardy.png';"/>
 						</div>
 						<div class="col">
-							<img id='teammate' src='/images/shivnaik.png' onmouseover="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_sillyshivnaik.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_shivnaik.png';"/>
+							<img id='teammate' src='/images/shivnaik.png' onmouseover="this.src='https://2020.igem.org/wiki/images/5/55/T--Waterloo--2020_sillyshivnaik.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/e/eb/T--Waterloo--2020_shivnaik.png';"/>
 						</div>
 					</div>
 					<div class="row">
@@ -412,16 +412,16 @@
 				<div class="accordion">
 					<div class="row">
 						<div class="col">
-							<img id='teammate' src='/images/alishadsouza.png' onmouseover="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_sillyalishadsouza.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_alishadsouza.png';"/>
+							<img id='teammate' src='/images/alishadsouza.png' onmouseover="this.src='https://2020.igem.org/wiki/images/1/12/T--Waterloo--2020_sillyalishadsouza.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/b/b3/T--Waterloo--2020_alishadsouza.png';"/>
 						</div>
 						<div class="col">
-							<img id='teammate' src='/images/anafernandez.png' onmouseover="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_sillyanafernandez.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_anafernandez.png';"/>
+							<img id='teammate' src='/images/anafernandez.png' onmouseover="this.src='https://2020.igem.org/wiki/images/f/f2/T--Waterloo--2020_sillyanafernandez.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/0/06/T--Waterloo--2020_anafernandez.png';"/>
 						</div>
 						<div class="col">
-							<img id='teammate' src='/images/christiansingh.png' onmouseover="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_sillychristiansingh.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_christiansingh.png';"/>
+							<img id='teammate' src='/images/christiansingh.png' onmouseover="this.src='https://2020.igem.org/wiki/images/3/33/T--Waterloo--2020_sillychristiansingh.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/4/4c/T--Waterloo--2020_christiansingh.png';"/>
 						</div>
 						<div class="col">
-							<img id='teammate' src='/images/clarereid.png' onmouseover="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_sillyclarereid.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_clarereid.png';"/>
+							<img id='teammate' src='/images/clarereid.png' onmouseover="this.src='https://2020.igem.org/wiki/images/b/bd/T--Waterloo--2020_sillyclarereid.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/5/5a/T--Waterloo--2020_clarereid.png';"/>
 						</div>
 					</div>
 					<div class="row">
@@ -489,10 +489,10 @@
 							<img id='teammate' src='/images/jamesstapleton.png'>
 						</div>
 						<div class="col">
-							<img id='teammate' src='/images/patrickthomas.png' onmouseover="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_sillypatrickthomas.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_patrickthomas.png';"/>
+							<img id='teammate' src='/images/patrickthomas.png' onmouseover="this.src='https://2020.igem.org/wiki/images/3/31/T--Waterloo--2020_sillypatrickthomas.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/c/cd/T--Waterloo--2020_patrickthomas.png';"/>
 						</div>
 						<div class="col">
-							<img id='teammate' src='/images/taranlayal.png' onmouseover="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_sillytaranlayal.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_taranlayal.png';"/>
+							<img id='teammate' src='/images/taranlayal.png' onmouseover="this.src='https://2020.igem.org/wiki/images/8/84/T--Waterloo--2020_sillytaranlayal.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/6/6e/T--Waterloo--2020_taranlayal.png';"/>
 						</div>
 					</div>
 					<div class="row">
@@ -631,7 +631,7 @@
 							<img id='teammate' src='/images/francoislemesre.png'>
 						</div>
 						<div class="col">
-							<img id='teammate' src='/images/geraldlee.png' onmouseover="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_sillygeraldlee.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_geraldlee.png';"/>
+							<img id='teammate' src='/images/geraldlee.png' onmouseover="this.src='https://2020.igem.org/wiki/images/0/00/T--Waterloo--2020_sillygeraldlee.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/8/84/T--Waterloo--2020_geraldlee.png';"/>
 						</div>
 						<div class="col">
 							<img id='teammate' src='/images/helenengelhardt.png'/>
@@ -704,7 +704,7 @@
 							<img id='teammate' src='/images/kingsleywong.png'>
 						</div>
 						<div class="col">
-							<img id='teammate' src='/images/michaelastwood.png' onmouseover="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_sillymichaelastwood.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_michaelastwood.png';"/>
+							<img id='teammate' src='/images/michaelastwood.png' onmouseover="this.src='https://2020.igem.org/wiki/images/5/5a/T--Waterloo--2020_sillymichaelastwood.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/1/15/T--Waterloo--2020_michaelastwood.png';"/>
 						</div>
 						<div class="col">
 							<img id='teammate' src='/images/sergiupocol.png'>
@@ -768,7 +768,7 @@
 				<div class="accordion">
 					<div class="row">
 						<div class="col">
-							<img id='teammate' src='/images/teodoravujovic.png' onmouseover="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_sillyteodoravujovic.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_teodoravujovic.png';"/>
+							<img id='teammate' src='/images/teodoravujovic.png' onmouseover="this.src='https://2020.igem.org/wiki/images/7/76/T--Waterloo--2020_sillyteodoravujovic.png';" onmouseout="this.src='https://2020.igem.org/wiki/images/8/8c/T--Waterloo--2020_teodoravujovic.png';"/>
 						</div>
 						<div class="col"></div>
 						<div class="col"></div>
