clean up some issues, rename pipes, model page

--- a/app/Education.html
+++ b/app/Education.html
@@ -119,13 +119,13 @@
 					<p><a href="https://2020.igem.org/wiki/images/d/db/T--Waterloo--Coordination_Geo_Primer.pdf">Coordination Geometry Primer</a></p>
 					<h1>Introduction to transport phenomena</h1>
 					<p>The process design portion of this year’s project required many modelling tools based on transport phenomena. Transport phenomena include momentum transport, mass transport, and energy transport, all of which are critical concepts in chemical engineering. We created a series of documents providing an introduction to transport phenomena suitable for those with a basic understanding of physics and single-variable calculus. </p>
-					<p><a href="https://2020.igem.org/wiki/images/d/de/T--Waterloo--TF0.pdf">0. Preamble</a>
-					<a href="https://2020.igem.org/wiki/images/0/0c/T--Waterloo--TF1.pdf">1. Molecular Momentum Transport</a>
-					<a href="https://2020.igem.org/wiki/images/e/ed/T--Waterloo--TF2.pdf">2. Convective Momentum Transport</a>
-					<a href="https://2020.igem.org/wiki/images/2/22/T--Waterloo--TF3.pdf">3. Assembling the Navier-Stokes Equation</a>
-					<a href="https://2020.igem.org/wiki/images/0/06/T--Waterloo--TF4.pdf">4. Examples Using the Navier-Stokes Equation</a>
-					<a href="https://2020.igem.org/wiki/images/9/9a/T--Waterloo--TF5.pdf">5. Introduction to Mass Transport</a>
-					<a href="https://2020.igem.org/wiki/images/8/84/T--Waterloo--TF6.pdf">6. General Mass Balance Equation</a></p>
+					<p><a href="https://2020.igem.org/wiki/images/d/de/T--Waterloo--TF0.pdf">0. Preamble</a></p>
+					<p><a href="https://2020.igem.org/wiki/images/0/0c/T--Waterloo--TF1.pdf">1. Molecular Momentum Transport</a></p>
+					<p><a href="https://2020.igem.org/wiki/images/e/ed/T--Waterloo--TF2.pdf">2. Convective Momentum Transport</a></p>
+					<p><a href="https://2020.igem.org/wiki/images/2/22/T--Waterloo--TF3.pdf">3. Assembling the Navier-Stokes Equation</a></p>
+					<p><a href="https://2020.igem.org/wiki/images/0/06/T--Waterloo--TF4.pdf">4. Examples Using the Navier-Stokes Equation</a></p>
+					<p><a href="https://2020.igem.org/wiki/images/9/9a/T--Waterloo--TF5.pdf">5. Introduction to Mass Transport</a></p>
+					<p><a href="https://2020.igem.org/wiki/images/8/84/T--Waterloo--TF6.pdf">6. General Mass Balance Equation</a></p>
 				</div>
 			</div> 
 				
