--- a/app/Parts.html
+++ b/app/Parts.html
@@ -65,52 +65,58 @@
 							<td>Bronze #4 Contribution</td>
 						</tr>
 						<tr>
+							<td><a href="http://parts.igem.org/Part:BBa_K863101">BBa_K863101</a></td>
+							<td>Protein_Domain</td>
+							<td>Cellulose binding Domain of Cellulomonas Fimi Exoglucanse (Freiburg-Standard)</td>
+							<td>Bronze #4 Contribution</td>
+						</tr>
+						<tr>
 							<td><a href="http://parts.igem.org/Part:BBa_K3381000">BBa_K3381000</a></td>
 							<td>Coding</td>
 							<td>FutA1 (iron-binding)</td>
-							<td></td>
+							<td>Silver #1 Engineering Success</td>
 						</tr>
 						<tr>
 							<td><a href="http://parts.igem.org/Part:BBa_K3381001">BBa_K3381001</a></td>
 							<td>Coding</td>
 							<td>FutA2 (iron-binding)</td>
-							<td></td>
+							<td>Silver #1 Engineering Success</td>
 						</tr>
 						<tr>
 							<td><a href="http://parts.igem.org/Part:BBa_K3381002">BBa_K3381002</a></td>
 							<td>Coding</td>
 							<td>Mst-CopC (copper-binding)</td>
-							<td></td>
+							<td>Silver #1 Engineering Success</td>
 						</tr>
 						<tr>
 							<td><a href="http://parts.igem.org/Part:BBa_K3381003">BBa_K3381003</a></td>
 							<td>Coding</td>
 							<td>FutA1-CBM2a</td>
-							<td></td>
+							<td>Silver #1 Engineering Success</td>
 						</tr>
 						<tr>
 							<td><a href="http://parts.igem.org/Part:BBa_K3381004">BBa_K3381004</a></td>
 							<td>Coding</td>
 							<td>FutA2-CBM2a</td>
-							<td></td>
+							<td>Silver #1 Engineering Success</td>
 						</tr>
 						<tr>
 							<td><a href="http://parts.igem.org/Part:BBa_K3381005">BBa_K3381005</a></td>
 							<td>Coding</td>
 							<td>Mst-CopC-CBM2a</td>
-							<td></td>
+							<td>Silver #1 Engineering Success</td>
 						</tr>
 						<tr>
 							<td><a href="http://parts.igem.org/Part:BBa_K3381006">BBa_K3381006</a></td>
 							<td>Coding</td>
 							<td>Improved Mst-CopC-CBM2a</td>
-							<td></td>
+							<td>Silver #1 Engineering Success</td>
 						</tr>
 						<tr>
 							<td><a href="http://parts.igem.org/Part:K3381007">BBa_K3381007</a></td>
 							<td>Coding</td>
 							<td>CBM2a + Flexible Linker</td>
-							<td></td>
+							<td>Gold #2 Improvement of an Existing Part</td>
 						</tr>
 					</tbody>
 				</table>
