--- a/app/Team.html
+++ b/app/Team.html
@@ -74,8 +74,7 @@
 
 			<div id="contentcol" class="contentcol">
 				<div class="overview">
-					Pir idegesos rener to tinen rune iehidovuk tibetel eyoboru, cihili peno hipi nisas igasawus perupon dunesid poke gasifiy sifa. Nat izirulo tirec loca icabiroc rihu tenip; asiesulal efo rilil racar eliesolum. So adolebiet nidopet aretece fatar ne hanuga ela aco, teha bi imi, moye soy eceliren va tacetir bobugi eres, se doda tir medoro eritaha de onila ewo nehaces miloval, ne rob esideqem lige: Onurag falare ademel rogosel niele?
-					Pir idegesos rener to tinen rune iehidovuk tibetel eyoboru, cihili peno hipi nisas igasawus perupon dunesid poke gasifiy sifa. Nat izirulo tirec loca icabiroc rihu tenip; asiesulal efo rilil racar eliesolum. So adolebiet nidopet aretece fatar ne hanuga ela aco, teha bi imi, moye soy eceliren va tacetir bobugi eres, se doda tir medoro eritaha de onila ewo nehaces miloval, ne rob esideqem lige: Onurag falare ademel rogosel niele?
+					We proudly present this year’s Waterloo iGEM team! We have three subteams: lab & design, human practices, and math & modelling. Our fantastic members are from a variety of years, faculties, and cities (scroll to the bottom of the page to see a map of where everyone lived this year). Get to know what our members’ biggest life goal is, what lab equipment they would be, what superpower they would have to improve our project, and more below!
 				</div>
 
 				<div class="labsubteam">
@@ -797,6 +796,8 @@
 						<div class="col teaminfo"></div>
 					</div>
 				</div>
+				<img class='map' src="https://2020.igem.org/wiki/images/d/df/T--Waterloo--Team_Map.png" alt="Map of where our members have lived during this iGEM season!">
+				<div class="caption bottom">Map of where our members have lived during this iGEM season!</div>
 			</div>
 		</article>
     </main>
