more content and some of accessibility

--- a/app/Measurement.html
+++ b/app/Measurement.html
@@ -71,7 +71,7 @@
 				</div>
 
 				<div class="copper">
-					COPPER
+					COPPER BINDING
 				</div>
 				
 				<div class='info'>
@@ -85,7 +85,7 @@
 				</div>
 
 				<div class="cellulose">
-					CELLULOSE
+					CELLULOSE BINDING
 				</div>
 
 				<div class='info'>
@@ -96,7 +96,7 @@
 	
 	
 				<div class="copperconc">
-					CONCENTRATION
+					COPPER CONCENTRATION
 				</div>
 				
 				<div class='info'>
