learn more button adjustments:

--- a/app/index.html
+++ b/app/index.html
@@ -43,8 +43,7 @@
 		<p class="hp7">By then breaking the bond between the protein and the metal ion, REMINE can produce a pure concentrated metal solution that can be re-used in the industry.</p>
 		<h1 class="interested">Interested in our project?</h1>
         <div onclick="location.href='http://2020.igem.org/Team:Waterloo/Description';" id="learnmore">
-			<img src="/images/learnmore.svg">
-			<div class="centered">Learn More</div>
+			Learn More
         </div> 
       </div>
     </main>
