add rest of content

--- a/app/Description.html
+++ b/app/Description.html
@@ -10,6 +10,7 @@
 		$(function() {
 			$('header').load('https://2020.igem.org/Template:Waterloo/header?action=raw&ctype=text/javascript');
 			$('footer').load('https://2020.igem.org/Template:Waterloo/footer?action=raw&ctype=text/javascript');
+			$('accessibility').load('https://2020.igem.org/Template:Waterloo/accessibility?action=raw&ctype=text/javascript');
 		});
 	</script>
 	<link rel="stylesheet" type="text/css" href="https://2020.igem.org/wiki/index.php?title=Template:Waterloo/css/styles&action=raw&ctype=text/css">
@@ -47,7 +48,8 @@
 				<p>REMINE is a packed column bioreactor containing metal-binding proteins which remove and recover toxic but valuable heavy metals from electronic manufacturing wastewater. The REMINE system is highly modular and can be customized for specific metals, industries, and local regulations. We have used protein modelling and molecular dynamics to improve our proteins’ metal affinity and process engineering tools to design an efficient large-scale bioreactor. With REMINE, the electronic industry can continue to grow while reducing its impact on our environment and health.</p>
 			</div>
 		</article>
-    </main>
+		<accessibility></accessiblity>
+	</main>
   <footer></footer>
 </body>
 </html>
