--- a/app/Improvement.html
+++ b/app/Improvement.html
@@ -10,6 +10,7 @@
 		$(function() {
 			$('header').load('https://2020.igem.org/Template:Waterloo/header?action=raw&ctype=text/javascript');
 			$('footer').load('https://2020.igem.org/Template:Waterloo/footer?action=raw&ctype=text/javascript');
+			$('accessibility').load('https://2020.igem.org/Template:Waterloo/accessibility?action=raw&ctype=text/javascript');
 		});
 	</script>
 	<link rel="stylesheet" type="text/css" href="https://2020.igem.org/wiki/index.php?title=Template:Waterloo/css/styles&action=raw&ctype=text/css">
@@ -46,6 +47,7 @@
 				<div class='caption'>3D model of the flexible linker (highlighted in green) between Mst-CopC, a copper-binding protein, and CBM2a (BBa_K863101)</div>
 			</div>
 		</article>
+		<accessibility></accessiblity>
     </main>
   <footer></footer>
 </body>
