--- a/app/index.html
+++ b/app/index.html
@@ -10,6 +10,7 @@
 		$(function() {
 			$('header').load('https://2020.igem.org/Template:Waterloo/header?action=raw&ctype=text/javascript');
 			$('footer').load('https://2020.igem.org/Template:Waterloo/footer?action=raw&ctype=text/javascript');
+			$('accessibility').load('https://2020.igem.org/Template:Waterloo/accessibility?action=raw&ctype=text/javascript');
 		});
 	</script>
 	<link rel="stylesheet" type="text/css" href="https://2020.igem.org/wiki/index.php?title=Template:Waterloo/css/styles&action=raw&ctype=text/css">
@@ -46,7 +47,8 @@
 			<img src="/images/learnmore.svg">
 			<div class="centered">Learn More</div>
         </div> 
-      </div>
+	  </div>
+	  <accessibility></accessiblity>
     </main>
   <footer></footer>
 </body>
