--- a/app/index.html
+++ b/app/index.html
@@ -34,7 +34,7 @@
     <main>
       <div id="homepageDiv">
 		<h1 class="slogan">Closing the loop for heavy metal waste</h1>
-		<p class="hp1">Electronic manufacturing consists of many processes, each of which generate wastewater with a unique composition of heavy metals.</p>
+		<p class="hp1">Electronic manufacturing consists of many processes, each of which generates wastewater with a unique composition of heavy metals.</p>
 		<p class="hp2"> The most common treatment method is to precipitate the heavy metals out into a toxic sludge that poses major health risks to humans and wildlife.</p>
 		<p class="hp3">One process used in the industry, called metal-finishing, produces approximately 150,000 tons of this sludge in the European Union alone every year.*</p>
 		<p class="hp4">*Magalhães, J.M., Silva, J. E., Castro, F., & Labrincha, J.A. (2005). Physical and Chemical Characterisation of Metal Finishing Industrial Wastes. Journal of Environmental Management, 75(2),157-66. https://doi.org/10.1016/j.jenvman.2004.09.011</p>
