shortcuts and font size

--- a/app/Collaborations.html
+++ b/app/Collaborations.html
@@ -57,7 +57,7 @@
 					<path id="pipe-three-three" class="confPipe" d="M146.902 1975.77L146.902 1981.71L114.5 1981.71L114.5 1975.77L146.902 1975.77Z" fill="#5C889F" stroke="#C1D3DB" stroke-width="3" style="visibility: hidden;"/>
 					<path id="pipe-three-four" class="confPipe" d="M146.902 2958.44L146.902 2964.38L114.5 2964.38L114.5 2958.44L146.902 2958.44Z" fill="#5C889F" stroke="#C1D3DB" stroke-width="3"/>
 				
-					<path id="pipe-two" class="ourlabPipe" d="M74.4998 1538.13V1.5H91.7731V1538.35C91.7731 1554.39 105.781 1567.14 120.937 1567.14H191V1587.05 H120.937C95.3446 1586.94 74.4998 1566.32 74.4998 1538.13Z" fill="#5C889F" stroke="#C1D3DB" stroke-width="3"/>
+					<path id="pipe-two" class="summerPipe" d="M74.4998 1538.13V1.5H91.7731V1538.35C91.7731 1554.39 105.781 1567.14 120.937 1567.14H191V1587.05 H120.937C95.3446 1586.94 74.4998 1566.32 74.4998 1538.13Z" fill="#5C889F" stroke="#C1D3DB" stroke-width="3"/>
 					<path id="pipe-two-one" class="summerPipe" d="M98.9021 1454.5L98.9021 1460.44L66.4999 1460.44L66.4999 1454.5L98.9021 1454.5Z" fill="#5C889F" stroke="#C1D3DB" stroke-width="3"/>
 					<path id="pipe-two-two" class="summerPipe" d="M98.9021 936.869L98.9021 942.81L66.4999 942.81L66.4999 936.869L98.9021 936.869Z" fill="#5C889F" stroke="#C1D3DB" stroke-width="3"/>
 					<path id="pipe-two-three" class="summerPipe" d="M98.9021 367.066L98.9021 373.007L66.4999 373.007L66.4999 367.066L98.9021 367.066Z" fill="#5C889F" stroke="#C1D3DB" stroke-width="3" style="visibility: hidden;"/>
