--- a/app/Contribution.html
+++ b/app/Contribution.html
@@ -33,7 +33,7 @@
     <main id="top">
 		<article>
 			<div class="pageHeader"> 
-				<div class="headerCol">
+				<div class="headerCol contribpage">
 					<h1> CONTRIBUTION </h1>
 				</div> 
 				<div class="headerCol2">
@@ -43,10 +43,11 @@
 
 			<div class='text'>
 				<p>To meet bronze medal #4, we added documentation to parts <a href="http://parts.igem.org/Part:BBa_K863101">BBa_K863101</a>, <a href="http://parts.igem.org/Part:BBa_K1189024">BBa_K1189024</a>, and <a href="http://parts.igem.org/Part:BBa_K1189025">BBa_K1189025</a>. We focused on characterizing their structure and function more thoroughly.</p>
+				<img src="https://2020.igem.org/wiki/images/b/b2/T--Waterloo--Contribution.png" alt="(left to right) Cellulose binding Domain of Cellulomonas Fimi Exoglucanse (Freiburg-Standard) (BBa_K863101); Fully assembled human ferritin protein (light chain: BBa_K1189024, heavy chain: BBa_K1189025)">
+				<div class="caption">(left to right) Cellulose binding Domain of Cellulomonas Fimi Exoglucanse (Freiburg-Standard) (BBa_K863101); Fully assembled human ferritin protein (light chain: BBa_K1189024, heavy chain: BBa_K1189025)</div>
 			</div>
-
 		</article>
-		<!--<accessibility></accessiblity>-->
+		<accessibility></accessiblity>
     </main>
   <footer></footer>
 </body>
