--- a/app/Parts.html
+++ b/app/Parts.html
@@ -114,7 +114,7 @@
 							<td>Silver #1 Engineering Success</td>
 						</tr>
 						<tr>
-							<td><a href="http://parts.igem.org/Part:K3381007">BBa_K3381007</a></td>
+							<td><a href="http://parts.igem.org/Part:BBa_K3381007">BBa_K3381007</a></td>
 							<td>Coding</td>
 							<td>CBM2a + Flexible Linker</td>
 							<td>Gold #2 Improvement of an Existing Part</td>
